finalized version 2.0